more config added

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,12 @@
 {
   "manifest_version": 3,
   "name": "Chat Clipper",
-  "version": "1.0",
+  "version": "0.1",
   "permissions": ["activeTab"],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
   "content_scripts": [
     {
       "matches": ["https://chat.openai.com/*"],
@@ -10,5 +14,12 @@
       "js": ["content.js"],
       "run_at": "document_idle"
     }
-  ]
+  ],
+  "browser_action": {
+    "icons": {
+      "16": "path/to/icon16.png",
+      "48": "path/to/icon48.png",
+      "128": "path/to/icon128.png"
+    }
+  }
 }
