--- a/manifest.json
+++ b/manifest.json
@@ -15,8 +15,8 @@
     }
   ],
   "action": {
-    "default_icons": {
-      "16": "./public/icon.png"
+    "default_icon": {
+      "16": "icon.png"
     }
   }
 }
