--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,9 @@
   ],
   "action": {
     "default_icon": {
-      "16": "icon.png"
+      "16": "icon_24.png",
+      "48": "icon_48.png",
+      "128": "icon_128.png"
     }
   }
 }
