--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Chat Clipper",
-  "version": "0.1",
+  "name": "Clip-it",
+  "version": "0.5",
   "permissions": ["activeTab", "storage", "tabs"],
   "background": {
     "service_worker": "background.js"
